--- a/RhAspMvc/Views/Medecins/Details.cshtml
+++ b/RhAspMvc/Views/Medecins/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Matricule)
+            @Html.DisplayName("Matricule medecin")
         </dt>
 
         <dd>
